VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc5Down.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [32MB/455.1MB][  7%][===>                                              ][10.67MB/s]  [72MB/455.1MB][ 15%][=======>                                          ][18MB/s]  [112MB/455.1MB][ 24%][============>                                     ][22.4MB/s]  [152MB/455.1MB][ 33%][================>                                 ][25.33MB/s]  [184MB/455.1MB][ 40%][====================>                             ][26.29MB/s]  [208MB/455.1MB][ 45%][======================>                           ][26MB/s]  [232MB/455.1MB][ 50%][=========================>                        ][25.78MB/s]  [256MB/455.1MB][ 56%][============================>                     ][25.6MB/s]  [280MB/455.1MB][ 61%][==============================>                   ][25.45MB/s]  [296MB/455.1MB][ 65%][================================>                 ][24.67MB/s]  [320MB/455.1MB][ 70%][===================================>              ][24.62MB/s]  [336MB/455.1MB][ 73%][====================================>             ][24MB/s]  [352MB/455.1MB][ 77%][======================================>           ][23.47MB/s]  [376MB/455.1MB][ 82%][=========================================>        ][23.5MB/s]  [392MB/455.1MB][ 86%][===========================================>      ][23.06MB/s]  [416MB/455.1MB][ 91%][=============================================>    ][23.11MB/s]  [432MB/455.1MB][ 94%][===============================================>  ][22.74MB/s]  [440MB/455.1MB][ 96%][================================================> ][22MB/s]  [455.1MB/455.1MB][100%][==================================================][22.75MB/s]  [455.1MB/455.1MB][100%][==================================================][22.75MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_125607/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_125607/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
